Lim-Dul's Vault
Eureka
Hypergenesis
Death by Dragons
Carpet of Flowers
Goblin Welder
Delaying Shield
Fatal Lore
Library of Lat-Nam
Misfortune
Assault // Battery
Fire // Ice
Night // Day
Trial // Error
Wax // Wane
Dead // Gone
Illusion // Reality
Life // Death
Pure // Simple
Rough // Tumble
Supply // Demand
Hide // Seek
Order // Chaos
Pain // Suffering
Spite // Malice
Stand // Deliver


New Phenomenons:




New Planes:

Feeding Grounds
Horizon Boughs


New Vanguard Avatars:




Known Issues:

On several occasions people have noticed that the forge deck editor and/or quest mode card shop would not open or display. We have also received reports that some of the tabs/panels in the deck editor are missing. Try deleting the file named "editor_preferred.xml" which is found in the "res/layouts" folder. This should force forge to then use the "editor_default.xml" file instead.

Several people have noticed that the cards displayed on the battlefield will fail to be displayed when the number of cards on the battlefield increases. Maximizing the human panel can help to re-display the cards.

Some time was spent turning the static ETB triggers into the proper ETB replacement effects they should be, mainly to interact correctly with each other. This work is not yet finished. As a result there is currently some inconsistencies with "Enters the battlefield with counters" (Not incredibly noticeable).

A recent contribution to the code base should fix some of the bugs that people noticed with cloning type abilities. At this time there are two remaining issues that we hope will be addressed in the near future.

1. Leave play triggers don't work correct for clones.
2. Copies of cards that setup Zone Change triggers via addComesIntoPlayCommand and addLeavesPlayCommand will not function correctly.
