@@ -30,6 +30,7 @@ import com.google.common.io.Files;
 
 import forge.Constant;
 import forge.Constant.Preferences;
+import forge.game.ai.AiProfile;
 import forge.gui.home.EMenuItem;
 import forge.gui.match.VMatchUI;
 import forge.gui.match.nonsingleton.VField;
@@ -73,6 +74,7 @@ public class ForgePreferences {
         UI_TARGETING_OVERLAY ("false"), /** */
         UI_ENABLE_SOUNDS ("true"), /** */
         UI_RANDOM_CARD_ART ("false"), /** */
+        UI_CURRENT_AI_PROFILE (AiProfile.AI_PROFILE_RANDOM_MATCH), /** */
 
         SUBMENU_CURRENTMENU (EMenuItem.CONSTRUCTED.toString()), /** */
         SUBMENU_SANCTIONED ("false"), /** */
