@@ -48,6 +48,11 @@ Order // Chaos
 Pain // Suffering
 Spite // Malice
 Stand // Deliver
+Boom // Bust
+Crime // Punishment
+Rise // Fall
+Bound // Determined
+Hit // Run
 
 
 New Phenomenons:
